# prompt_plugin

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
prompt_plugin/: __init__.py  api.py  cli.py  engine.py  enhancer.py  history.py  models.py  templates.py
prompt_plugin/static/: index.html
tests/: test_api.py  test_core.py
